fix: Add z-index: 1 to video container

--- a/packages/inline-video/style.module.css
+++ b/packages/inline-video/style.module.css
@@ -7,6 +7,7 @@
 
   width: 100%;
   position: relative;
+  z-index: 1;
 
   @media (--medium-up) {
     @nest .left & {
